--- a/module/news.html
+++ b/module/news.html
@@ -39,7 +39,7 @@
                   <p>En 1991, un videojuego apareció en los salones recreativos para poner patas arriba la industria del videojuego. En 2016 se cumplen 25 años de la aparición de dicho título al tiempo que una nueva entrega de la franquicia irrumpe en el mercado. Es el momento de homenajear a Ryu y compañía lanzando al aire una buena salva de Hadokens,Dicen que la Historia, esa con H mayúscula, esa que sienta cátedra y pasa a formar parte tanto de los libros de texto como del legado de la humanidad, la escriben los vencedores. Sin embargo, la historia que nos disponemos a narraros ahora no comienza rememorando las gestas y hazañas de un vencedor, sino de un humilde y corriente videojuego que 29 años atrás pasó de puntillas por los salones recreativos. Dicho videojuego respondía al nombre de Street Fighter. Pocos le hicieron caso en su momento, dado que adolecía de no pocos fallos que lastraban su jugabilidad, perteneciendo además a un género más que minoritario como era el de la lucha versus uno contra uno. Tampoco es que lo tuviera fácil para darse a conocer, puesto que su distribución en salones arcade estuvo muy restringida debido a la propia naturaleza de su sistema de control, el cual usaba seis botones de ataque cuando por entonces lo habitual eran dos, o a lo sumo tres botones los que un juego necesitaba para gestionar todos sus comandos.</p>
                 </article>
 
-                <ul class="pagination">
+                <ul class="pagination articles-pagination">
                     <li><a class="disabled">&laquo;</a></li>
                     <li><a class="active" href="#">1</a></li>
                     <li><a href="#">2</a></li>
@@ -50,8 +50,22 @@
                 </ul>
             </section>
             <aside class="sidebar">
-                <div>
-                    <img src="img/Marcianito_1.gif" class="imgaside">
-                </div>
+              <div>
+                  <img src="img/Marcianito_1.gif" class="imgaside">
+              </div>
+              <div class="users-fans">
+                  <a href="#" class="users-fans-social social-facebook">
+                      <i class="icon-facebook"></i>Facebook
+                  </a>
+                  <a href="#" class="users-fans-social social-youtube">
+                      <i class="icon-youtube-play"></i>Youtube
+                  </a>
+                  <a href="#" class="users-fans-social social-googleplus">
+                      <i class="icon-google-plus"></i>Google+
+                  </a>
+                  <a href="#" class="users-fans-social social-twitter">
+                      <i class="icon-twitter"></i>Twitter
+                  </a>
+              </div>
             </aside>
 </div>
